Add scripts for deploy

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "elbridge",
   "version": "0.1.0",
+  "homepage": "http://www.benkraft.org/elbridge/",
   "private": true,
   "devDependencies": {
     "react-scripts": "0.8.5"
