--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,4 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
-
-# dependencies
-node_modules
-
-# testing
-coverage
-
-# production
+backend/lib
 build
-
-# misc
-.DS_Store
-.env
-npm-debug.log
+node_modules
 yarn.lock
