--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "homepage": "http://www.benkraft.org/elbridge/",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.8.5"
+    "react-scripts": "2.1.1"
   },
   "dependencies": {
     "react": "^15.4.2",
@@ -15,5 +15,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
